# rins

./: .gitignore  README.md  rins_init.bash  rviz_config.rviz
install/: local_setup.sh  setup.sh
install/dis_tutorial3/share/dis_tutorial3/: local_setup.sh  package.sh
install/dis_tutorial4/share/dis_tutorial4/: local_setup.sh  package.sh
log/: latest_build
src/dis_tutorial3/config/: nav2.yaml
src/dis_tutorial3/launch/: sim_turtlebot_nav.launch.py
src/dis_tutorial3/maps/: costmap.pgm  map.pgm
src/dis_tutorial3/maps/non_sim/: backup.pgm  costmap.pgm  map.pgm  map.yaml
src/dis_tutorial3/scripts/: detect_people.py  robot_commander.py
src/dis_tutorial3/worlds/: demo3.sdf  monas.sdf
src/dis_tutorial3/worlds/demo3_meshes/: map.dae
src/dis_tutorial4/scripts/: map_goals.py
src/dis_tutorial6/: CMakeLists.txt  package.xml
src/dis_tutorial6/scripts/: detect_rings2.py  floor_mask.py  park.py  sky_mask.py  test.py
src/dis_tutorial7/scripts/: arm_mover_actions.py
src/dis_tutorial7/urdf/sensors/: oakd.urdf.xacro  top_camera.urdf.xacro
src/task1/: .CMakeLists.txt.swp  .package.xml.swp  CMakeLists.txt  package.xml
src/task1/launch/: bash_launch.bash  sim_turtlebot_nav.launch.py  task1.launch.py
src/task1/msg/: .FaceNormal.msg.swp  FaceNormal.msg  GoalKeypoint.msg
src/task1/scripts/: .detect_people.py.swp  .face_extractor.py.swo  .keypoint_follower.py.swp  .keypoints.txt.swp  .map_goals.py.swp  .people_manager.py.swp  detect_people.py  face_extractor.py  keypoint_follower.py  keypoints.txt  map_goals.py  people_manager.py  talker.py  test.py  ž
src/task2/: CMakeLists.txt  package.xml
src/task2/launch/: bash_set_arm.bash  sim_turtlebot_nav.launch.py  task2.launch.py
src/task2/msg/: RingInfo.msg
src/task2/scripts/: autonomous_explorer.py  color_talker.py  detect_rings_depth.py  master.py  master.py.orig  master_BACKUP_142112.py  master_BASE_142112.py  park.py  ring_detection.py  talker.py
src/task2/src/: cylinder_segmentation.cpp
src/task2/srv/: Color.srv
src/task3/: CMakeLists.txt  package.xml
src/task3/launch/: task2.launch.py  task3.launch.py
src/task3/msg/: AnomalyInfo.msg  CylinderInfo.msg  FaceInfo.msg  Park.msg  ParkingSpotInfo.msg  PeopleInfo.msg  RingInfo.msg
src/task3/scripts/: anomaly_detection.py  assignmnet_6.py  cylinder_detection.py  defect_detection_test.py  detect_people.py  face_detection.py  face_extractor.py  map_processor.py  master.py  park.py  park_pos_detection.py  pca_mona.py  qr_codes.py  qr_test.py  ring_detection.py  talker.py  ž
